--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -1,22 +1,13 @@
-.search-box{
-    border-radius: 50px 0 0 50px;
-    width: 100px;
-    height: 30px;
+.btn{
+    background-color: white;
+    border-color: #00ff00;
+    color: #00ff00;
 }
-.logo{
-    width: 100px;
+.btn-custommer:focus{
+    background-color: #00ff00;
+    border-color: #00ff00
 }
-.btn-src{
-    border-radius: 0 50px 50px 0;
-    height: 30px;
+.btn:hover{
+    background-color: #00ff00;
+    border-color: #00ff00
 }
-
-@media (min-width: 576px) { 
-    .search-box{
-        border-radius: 50px 0 0 50px;
-        width: 400px;
-    }
-    .logo{
-        width: 150px;
-    }
- }
