--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -11,3 +11,12 @@
     background-color: #00ff00;
     border-color: #00ff00
 }
+.card {
+    width: 175px;
+    height: 250px;
+}
+.default-img{
+    margin-bottom: -20px;
+    width: 175px;
+    height: 125px;
+}
