--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -14,6 +14,25 @@
     outline: none;
 }
 
+/* cart style*/
+.cart-check{
+    width: 700px;
+}
+.img-cart{
+    width: 100px;
+    height: 100px;
+}
+.btn-plus, .btn-min{
+    height: 40px;
+    width: 40px;
+}
+.card-buy{
+    width: 400px;
+}
+.btn-buy{
+    width: 360px;
+}
+
 
 .btn-custommer, .btn-seller, .btn-auth{
     background-color: white;
