--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -73,6 +73,19 @@
 }
 
 /*profile style*/
+.sidebar{
+    height: calc(100vh - 80px);
+    width: 25%;
+}
+.content{
+    flex: 1;
+    background-color: #f5f5f5;
+}
+.content .profile-edit{
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+}
 .form-edit{
     background-color: #ebebeb;
 }
