--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -56,6 +56,10 @@
     width: 198px;
     height: 150px;
 }
+.product_name{
+  text-decoration: none;
+  color: #000;
+}
 
 /*category detail style*/
 .one{
