--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -25,6 +25,9 @@
 .btn-plus, .btn-min{
     height: 40px;
     width: 40px;
+    margin: 10px;
+    background-color: rgb(212, 212, 212);
+    border-color: rgb(212, 212, 212);
 }
 .card-buy{
     width: 400px;
@@ -84,7 +87,24 @@
   color: rgb(136, 136, 136);
 }
 
-/*category detail style*/
+/*detail product*/
+.star-detail{
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-bottom: 20px;
+}
+.star-detail-num{
+  width: 20px;
+  height: 20px;
+  color: rgb(136, 136, 136);
+  margin-top: -10px;
+  margin-bottom: 10;
+}
+.price-tag{
+  margin-top: -5px;
+  margin-bottom: 20px;
+}
 .one{
   width: 200px;
   height: 200px;
@@ -105,6 +125,12 @@
     height: 40px;
     background-color: #00ff00;
     border-color: #00ff00;
+}
+.btn-color{
+  width: 50px;
+  height: 50px;
+  margin-top: -5px;
+  margin-bottom: 15px;
 }
 
 /*profile style*/
