--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -13,6 +13,10 @@
     border-left-color: white;
     outline: none;
 }
+.avatar-nav{
+  width: 25px;
+  height: 25px;
+}
 
 /* cart style*/
 .cart-check{
@@ -195,4 +199,8 @@
 .card-add{
   border-style: dashed;
   height: 100px;
+}
+.btn-modal{
+  width: 200px;
+  border-radius: 100px;
 }
